stylesheet.css
/*
    This is the stylesheet for the main HTML document.
    Remember to document properly (what selector does what) when you make a style change!
    -------------------------------------------------------------------------------------
*/

@font-face{
    font-family: niceFont;
    src: url(niceFont.otf);
}


/*
    General stuff for the html and body
*/
html, body{
    padding: 0px;
    margin: 0px;
    background-image: url("./img/background.jpg");
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: 100% 100%;
    color: rgba(60,63,62, 0.95);
    overflow-x: hidden;
}

/*
    Styling for the header block
*/
header{
    margin: 0px;
    padding: 0px;
    position: fixed;
    width: 100%;
    height: 7%;
    top: -7%;
    border-bottom:1px solid gray;
    background-color: rgba(55,55,55, 0.95);
    -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
    -moz-animation: fadein 3s; /* Firefox < 16 */
    -ms-animation: fadein 3s; /* Internet Explorer */
    -o-animation: fadein 3s; /* Opera < 12.1 */
    animation: fadein 3s;
}

span{
    display: inline;
}

/*
    For all the individual navigation link tabs
*/
.navTab{
    float: left;
    margin-left: 2.1%;
    margin-right: 2.8%;
    margin-top: 0.8%;
    font-family: niceFont;
    color: white;
    font-size: 0.75em;
    letter-spacing: 0.35em;
    padding-bottom: 0.5%;
    padding-left: 0.3%;
    padding-top: 0.5%;
    border-radius: 4px;
}

.navTab:hover{
    background-color: rgba(122,203,249, 0.15);
    padding-top: 0.6%;
    cursor: pointer;
}


/* Chrome, Safari, Opera */
@-webkit-keyframes mymove {
    70% {-webkit-transform: rotate(360deg);}
}

/* Standard syntax */
@keyframes mymove {
    70% {transform: rotate(360deg);}
}
/*
    For the logo image in the header
*/
#headerLogo{
    float: left;
    margin-left: 3%;
    width: 4%;
    height: 100%;
    margin-right: 2%;
}

#headerLogo:hover{
    -webkit-animation: mymove 2s infinite;
    animation: mymove 2s infinite;
}

/*
    The main background image
*/
#mainImage{
    width: 70%;
    height: 100%;
    display: block;
    margin: auto;
    z-index: 1;
}

/*
    For all the description paragraphs
*/
.description{
    padding-right: 6%;
    padding-bottom: 4%;
    padding-left: 10%;
    padding-top: 4%;
    line-height: 250%;
    font-size: 1.2em;
    font-family: niceFont;
}

#subDiv3{
    margin-bottom: 7%;
}

/*
    For the images that go alongside the description paragraphs
*/
.sideImage{
    float: left;
    padding-left: 8%;
    padding-right: 8%;
    width: 20%;
    height: 40%;
    display: block;
    padding-top: 3%;
}

#featurePic1{
    padding-top: 0%;
    height: 30%;
    width: 15%;
}

#aboutLogo{
    margin-top: 0%;
    padding-top: 1.5%;
    padding-bottom: 5%;
}


/*
    For all the headings (titles)
*/
.heading{
    width: 100%;
    text-align: center;
    font-size: 4em;
    font-family: niceFont;
    letter-spacing: 0.5em;
    font-weight: bold;
}

/*
    "Who we are heading" (title)
*/

.subheading{
    font-family: niceFont;
    font-size:1.6em;
    padding-top: 5%;
    width: 20%;
    letter-spacing: 0.2em;
    font-weight: bold;
}

/*
    For all the main section divs
*/
.section{
    width:100%;
    clear: both;
    margin: 0;
    padding: 0;
    overflow: auto;
}


/*
    The footer text at the bottom of the page
*/
.footerText{
    text-align: center;
    margin-top: 2%;
    color: rgb(214,215,214);
    font-size: 1.4em;
    font-family: niceFont;
}

/*
    The footer text at the bottom of the page
*/



#slogan{
    padding-bottom: 1%;
    margin-left: 3%;
    color: white;
    font-size: 4em;
    font-family: niceFont;
}

/*
    The containers for the team member portraits
*/
.memberPortrait{
    float: left;
    width: 33%;
    padding-bottom: 7%;
    font-family: niceFont;
}

.name{
    font-size: 1.2em;
    font-weight: bold;
}

.title{
    font-weight: bold;
}

.memberDescription{
    text-align: center;
    justify-content: center;
    width: 60%;
    padding-left: 20%;
}

.headshot{
    display: block;
    margin: auto;
    width: 55%;
    height: 36%;
}

form{
    width: 50%;
    padding-left: 24%;
    padding-bottom: 2%;
    clear: both;
}

button{
    color: white;
    background-color: rgb(50, 50, 50);
}


input{
    width: 100%;
    height: 5%;
    font-size: 1.1em;
}

#aboutDiv{
    background-color: rgba(246,246,246,1);
}

#featuresDiv{
    background-color: white;
}

#theTeamDiv{
    background-color: rgba(240,252,255,0.93);
}

#contactDiv{
    background-color: white;
    font-family: niceFont;
    font-size: 1.1em;
}

#subDiv2{
    background-color: rgb(240,253,255);
    padding-top: 5%;
    padding-bottom: 5%;
}

#subDiv1{
    margin-top: -3%;
    padding-bottom:  5%;
}


#line{
    height: 10px;
    width: 45%;
    border-bottom: 1.5px solid white;
    float: left;
    padding-top: 1.2%;
    margin-right: 2%;
}

footer{
    background-color: rgba(40, 40, 40, 1);
}

textarea{
    resize: none;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;

    width: 100%;  
}

.abtn{
    text-decoration: none;
    color: white;
    padding-right: 7%;
    padding-left: 7%;
    padding-top: 1%;
    padding-bottom: 1%;
    background-color: rgba(48, 49, 51, 0.95);
    font-size: 1.2em;
}

.btn{
    display: block;
    margin-left: 43.5%;
    padding-bottom: 5%;
}

.abtn:hover{
    background-color: rgba(48, 49, 51, 0.6);
}

.titleLine1{
    width: 65%;
    height: 0.6%;
    background-color: rgb(248, 175, 39);
    margin-top: 5.5%;
    margin-bottom: 4%;
}
.titleLine2{
    width: 65%;
    background-color: rgb(247, 180, 55);
    margin-left: 55%;
    height: 0.7%;
    margin-top: 2%;
    margin-bottom: 5.5%;
    float: right;
}

#firstNavTab{
    margin-left: 40%;
}

#infoStuff{
    color: rgb(214,215,214);
    font-size: 0.7em;
    font-family: niceFont;
    padding-top: 2%;
}

.socialMedia{
    width: 7%;
    height: 4%;
    margin-left: 6%;
    margin-right: 2.1%;
    margin-top: 5%;
}

.bottomDiv{
    display: inline;
    float: left;
}


.leaf{
    position: absolute;
    width: 1.5%;
    height: 3%;
    bottom: 2px;
    animation: spin 1s linear infinite;
}
#loadingScreen{
    background-color: rgb(30, 32, 38);
    height: 100%;
    width: 100%;
    position: fixed;
    z-index: 1000;
}

#loadText{
    color: orange;
    font-family: niceFont;
    font-size: 3em;
    letter-spacing: 1em;
    display: block;
    text-align: center;
    stroke-width: bolder;
    padding-top: 10%;
    padding-bottom: 5%;
    padding-left: 2.5%;
}

#circle1{
    border: 10px solid rgb(30, 32, 38); /* Light grey */
    border-top: 10px solid #80c5f3; /* Blue */
    border-bottom: 10px solid #80c5f3; /* Blue */
    border-radius: 50%;
    width: 200px;
    height: 200px;
    animation: spin 1.5s linear infinite;  
    margin: auto;
    position: relative;
    display: block;
    z-index: 5;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(-360deg); }
}

@keyframes spin2 {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

